--- a/practica_2/Vagrantfile
+++ b/practica_2/Vagrantfile
@@ -8,6 +8,7 @@ Vagrant.configure("2") do |config|
   # Configuración del proveedor VirtualBox
   config.vm.provider "virtualbox" do |vb|
     vb.memory = "1024"
+    vb.customize [ "modifyvm", :id, "--uartmode1", "disconected" ]
   end
 
   # Instalar Chef antes de ejecutar chef_solo
