--- a/practica_2/chef-repo/cookbooks/wordpress/kitchen.yml
+++ b/practica_2/chef-repo/cookbooks/wordpress/kitchen.yml
@@ -1,24 +1,17 @@
----
 driver:
   name: vagrant
-
-## The forwarded_port port feature lets you connect to ports on the VM guest
-## via localhost on the host.
-## see also: https://www.vagrantup.com/docs/networking/forwarded_ports
-
-#  network:
-#    - ["forwarded_port", {guest: 80, host: 8080}]
+  network:
+    - ["forwarded_port", {guest: 80, host: 8081}]
 
 provisioner:
   name: chef_zero
 
-  ## product_name and product_version specifies a specific Chef product and version to install.
-  ## see the Chef documentation for more details: https://docs.chef.io/workstation/config_yml_kitchen/
-  #  product_name: chef
-  #  product_version: 17
-
 verifier:
-  name: inspec
+  name: serverspec
+  test_framework: rspec
+  suits:
+    - name: unit
+      pattern: spec/unit/recipes
 
 platforms:
   - name: ubuntu-20.04
