--- a/practica_2/chef-repo/cookbooks/wordpress/kitchen.yml
+++ b/practica_2/chef-repo/cookbooks/wordpress/kitchen.yml
@@ -1,24 +1,28 @@
 driver:
   name: vagrant
   network:
-    - ["forwarded_port", {guest: 80, host: 8081}]
+    - ["forwarded_port", {guest: 80, host: 8081}] # Para Ubuntu
+    - ["forwarded_port", {guest: 80, host: 8082}] # Para CentOS
 
 provisioner:
   name: chef_zero
 
 verifier:
-  name: serverspec
+  name: inspec
   test_framework: rspec
-  suits:
-    - name: unit
-      pattern: spec/unit/recipes
 
 platforms:
   - name: ubuntu-20.04
+    driver:
+      network:
+        - ["forwarded_port", {guest: 80, host: 8081}] # Puerto para Ubuntu
   - name: centos-8
+    driver:
+      network:
+        - ["forwarded_port", {guest: 80, host: 8082}] # Puerto para CentOS
 
 suites:
   - name: default
     verifier:
-      inspec_tests:
-        - test/integration/default
+      patterns:
+        - test/integration/default/*_spec.rb
